--- a/src/style.css
+++ b/src/style.css
@@ -245,6 +245,7 @@ body {
 
 .file-row-download {
     display: flex;
+    justify-content: space-between;
     padding: 7px;
     border-width: 1px;
     border-color: rgba(255, 255, 255, 0.208);
