--- a/src/style.css
+++ b/src/style.css
@@ -125,12 +125,16 @@ body {
 .uploader-wrapper {
     width: 100%;
     height: 500px;
-    border-style: solid;
-    border-width: 1px;
+    border-style: dashed;
+    border-width: 2px;
     border-color: rgba(255, 255, 255, 0.251);
     border-radius: 12px;
     transition: 0.12s;
     overflow-y: scroll;
+}
+
+.uploader-wrapper:hover {
+    background-color: rgb(26, 26, 26);
 }
 
 .reciever-wrapper {
